# 2023_treecable_plesse_v1

./: .gitignore  2023_treecable_plesse_v1.code-workspace  README.md  Snakefile  analysis_config.py  config.yaml  pyproject.toml  run_analysis.sh
notebooks/: 000_template.ipynb  000_test.ipynb  100_experiment_overview.ipynb  2023_Kronensicherung_Plesse_130_PTQ.ipynb  2023_Kronensicherung_Plesse_300_Analyse.ipynb  2023_Kronensicherung_Plesse_310_Analyse_Kraft.ipynb
notebooks_old/: 2023_Kronensicherung_Plesse_110_Versuchsablauf.ipynb  2023_Kronensicherung_Plesse_120_LS3.ipynb  2023_Kronensicherung_Plesse_200_Zusammenfuehren_und_Filtern.ipynb  2023_Kronensicherung_Plesse_320_Analyse_Randfaserdehnung.ipynb  2023_Kronensicherung_Plesse_331_Analyse_Schwingungen_Harmonisch.ipynb  2023_Kronensicherung_Plesse_332_Analyse_Schwingungen_Integrale.ipynb  Code_Snippes_2023_Kronensicherung_Plesse_531_Analyse_Schwingungen_.ipynb  project_config.py
